2000-04-11  Christopher James Lahey  <clahey@helixcode.com>

	* widgets/e-text/e-text.c: Moved some logic a bit.  Minor changes.

00-04-11  Iain Holmes  <ih@csd.abdn.ac.uk>

	* widgets/e-text/e-text.c
	(e_text_set_args): Recalculate bounds when width or clip_width changes.
	(tooltip_event): Forward clicks on the tooltip onto the text item.
	(_do_tooltip): Correct the origin co-ordinates to the items co-ords.
	(e_text_point): Return 0 when the mouse is on the item.
	(_do_tooltip): Make the tooltip obey the parent items line_wrap and max_
	lines.

00-04-11  Chris Toshok  <toshok@helixcode.com>

	* addressbook/backend/pas/pas-backend-file.c
	(get_e_card_prop): new function, taking code from func_contains to
	get string properties.
	(entry_compare): new function generic, taking strstr-like function
	as a parameter.
	(func_contains): rewrite function to use entry_compare.
	(is_helper): new helper function to map strcmp to a strstr-like
	function.
	(func_is): new function, implementing "is" for searches.
	(endswith_helper): new function.
	(func_endswith) new function, implementing "endswith" for
	searches.
	(beginswith_helper): new function.
	(func_beginswith): new function, implementing "beginswith" for
	searches.
	(compare_email): new function for searching all email addresses of
	a contact.
	(compare_phone): new function for searching all phone numbers of a
	contact.
	(compare_address): new function for searching all addresses of a
	contact (unimplemented as yet).
	(entry_compare): add support for searching the list items "email",
	"phone" and "address".
	(vcard_matches_search): free the esexp_result.
	(entry_compare): we want comparison functions to take 2 args.

2000-04-11  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/gui/minicard/e-minicard-view.c: This was setting
	E_REFLOW(view)->items to NULL too soon.  Fixed now.

2000-04-11  Chris Toshok  <toshok@helixcode.com>

	* addressbook/backend/pas/pas-backend-file.c