@@ -525,14 +525,15 @@ e_icon_bar_set_view_type (EIconBar *icon_bar,
 static GdkPixbuf *
 flatten_alpha (GdkPixbuf *image, guint rgb)
 {
-	if (!image || !image->art_pixbuf->has_alpha)
+	if (!image || !gdk_pixbuf_get_has_alpha (image))
 		return NULL;
+
 
 	return gdk_pixbuf_composite_color_simple (
 		image,
-		image->art_pixbuf->width,
-		image->art_pixbuf->height,
-		ART_FILTER_NEAREST,
+		gdk_pixbuf_get_width (image),
+		gdk_pixbuf_get_height (image),
+		GDK_INTERP_NEAREST,
 		255,
 		32,
 		rgb, ~rgb);
